--- a/application-sets/my-application-sets/many-app-many-clsters.yaml
+++ b/application-sets/my-application-sets/many-app-many-clsters.yaml
@@ -7,13 +7,11 @@ spec:
     # matrix 'parent' generator
     - matrix:
         generators:
-          # git generator, 'child' #1
           - git:
-              repoURL: https://github.com/avishnyakov/gitops-cert-level-2-examples.git
+              repoURL: https://github.com/avishnyakov/gitops-cert-level-2-examples
               revision: HEAD
               directories:
-                - path: application-sets/example-apps/*
-          # cluster generator, 'child' #2
+                - path: "application-sets/example-apps/*"
           - clusters:
               selector:
                 matchLabels:
@@ -24,7 +22,7 @@ spec:
     spec:
       project: default
       source:
-        repoURL: https://github.com/avishnyakov/gitops-cert-level-2-examples.git
+        repoURL: https://github.com/avishnyakov/gitops-cert-level-2-examples
         targetRevision: HEAD
         path: '{{path}}'
       destination:
