--- a/application-sets/my-application-sets/many-app-many-clsters.yaml
+++ b/application-sets/my-application-sets/many-app-many-clsters.yaml
@@ -12,10 +12,7 @@ spec:
               revision: HEAD
               directories:
                 - path: "application-sets/example-apps/*"
-          - clusters:
-              selector:
-                matchLabels:
-                  argocd.argoproj.io/secret-type: cluster
+          - clusters: {}
   template:
     metadata:
       name: '{{path.basename}}-{{name}}'
